--- a/Assignments/EmmaKaufman_A02_CodingBasics.Rmd
+++ b/Assignments/EmmaKaufman_A02_CodingBasics.Rmd
@@ -32,23 +32,18 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r basics 1}
 #1. 
-Sequence = seq(1, 30, 3) # from, to, by
+Sequence = seq(1, 30, 3) # from 1, to 30, by 3 to create the sequence of numbers called Sequence 
+Sequence
 
 #2. 
-Mean = mean(Sequence)
+Mean = mean(Sequence) #calculating the mean of Sequence
+Mean
 
-Median = median(Sequence)
+Median = median(Sequence) #calculating the median of Sequence
+Median
+
 #3. 
-#correct if else function?
-if (Mean > Median){
-  print("The mean is greater than the median") 
-}
-else{
-   print ("The mean is not greater than the median")
-}
- 
-
-
+Mean>Median #is mean greater than median? will return false if false, return true if true
 ```
 
 ## Basics, Part 2
@@ -62,14 +57,41 @@ else{
 8.  Label the columns of your data frame with informative titles.
 
 ```{r basics 2}
+#5. 
+Names <- c('Emma', 'Jenn', 'Hanna', 'Cara') #character vector
+Names
+#class(Names)
+
+Scores <- c(100, 100, 100 ,100) #numeric vector
+Scores
+#class(Scores)
+
+Passing <- c('TRUE', 'TRUE', 'TRUE', 'TRUE') #character vector
+Passing
+#class(Passing)
+
+#7.
+df_test_results <- as.data.frame(cbind(Names,Scores,Passing)) #creating a dataframe from the Names, Scores, and Passing vectors 
+df_test_results
+
+#8.
+#Titles of the vectors used to create the df were informative, as a result the column names are informative, but can change them using colnames()
+
+colnames(df_test_results) <- c('Student Names', 'Test Scores out of 100', 'Above 50%?') #changing the names of the column titles
+
+df_test_results
 
 ```
 
 9.  QUESTION: How is this data frame different from a matrix?
 
 > Answer:
+They are different because a matrix can only contain one class type, but this data frame contains multiple classes of data. It has a column of numeric data as well as columns of character data. 
+
 
 10. Create a function with an if/else statement. Your function should take a **vector** of test scores and print (not return) whether a given test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. 
+
+
 
 11. Apply your function to the vector with test scores that you created in number 5.
 
