--- a/Assignments/EmmaKaufman_A02_CodingBasics.Rmd
+++ b/Assignments/EmmaKaufman_A02_CodingBasics.Rmd
@@ -86,19 +86,24 @@ df_test_results
 9.  QUESTION: How is this data frame different from a matrix?
 
 > Answer:
-They are different because a matrix can only contain one class type, but this data frame contains multiple classes of data. It has a column of numeric data as well as columns of character data. 
+They are different because a matrix can only contain one class type, but this data frame contains multiple class types. It has a column of numeric data as well as columns of character data. A matrix would only contain one class type. 
 
 
 10. Create a function with an if/else statement. Your function should take a **vector** of test scores and print (not return) whether a given test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. 
-
-
+```{r}
+is_it_passing <- function(x){
+  ifelse(x>=50,TRUE,FALSE)
+}
+  
+```
 
 11. Apply your function to the vector with test scores that you created in number 5.
 
 ```{r basics 3}
-
+is_it_passing(Scores)
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
 
 > Answer:
+ifelse worked because we only need to know if the score is greater than or equal to 50, and can determine whether a score passes or fails accordingly. If the score is greater than or equal to 50, the function returns TRUE. In any other scenario (the test score being less than 50), the function returns FALSE. 
