--- a/Lessons/02Lab_Intro_DataFrame.Rmd
+++ b/Lessons/02Lab_Intro_DataFrame.Rmd
@@ -4,6 +4,8 @@ subtitle: "Environmental Data Analytics"
 author: "Luana Lima"
 date: "Fall 2023"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -22,7 +24,11 @@ Let's look into a built-in data frame from package "datasets" - cars. The data g
 
 ```{r cars}
 cars
+#by issuing the name of the dataframe you can preview it
+mtcars
+#the output is within the document, chunk output inline, or in colse, chunk output in console, when issued in console the command opens a new tab to preview the table
 ```
+
 
 Note that it has 2 columns and 50 rows.
 
@@ -31,7 +37,8 @@ Note that it has 2 columns and 50 rows.
 Suppose you want just the column speed. How would you access that data?
 
 ```{r}
-cars$speed
+cars$speed #returns a vector of the values in the speed column 
+mtcars$cyl
 ```
 
 How would you store it on another object?
@@ -51,12 +58,13 @@ class(car_speed)
 
 #Option 2
 is.data.frame(car_speed)
+is.vector(car_speed)
 ```
 
 How could you make it a data frame?
 
 ```{r}
-df_car_speed <- as.data.frame(car_speed)
+df_car_speed <- as.data.frame(car_speed) #creates a dataframe from vectors
 df_car_speed
 class(df_car_speed)
 ```
@@ -69,13 +77,13 @@ How could you add columns to *df_car_speed*?
 car_dist <- cars$dist
 
 #Option 1
-df <- cbind(df_car_speed,car_dist)  #similarly rows could be added using rbind()
+df <- cbind(df_car_speed,car_dist)  #similarly rows could be added using rbind(), binds columns and makes a dataframe if they are the same length
 class(df)
 df
 
 #Or Option 2 - transform into a data frame before binding
 df_car_dist <- as.data.frame(car_dist)  #op2
-df_opt2 <- cbind(df_car_speed,df_car_dist)
+df_opt2 <- cbind(df_car_speed,df_car_dist) #you can also combine two dataframes (instead of two vectors)
 class(df_opt2)
 df_opt2
 
@@ -94,7 +102,7 @@ How would you create a data frame?
 
 ```{r}
 #useful function data.frame()
-create_df <- data.frame("speed"=car_speed,"dist"=car_dist)
+create_df <- data.frame("speed of car"=car_speed,"dist of car"=car_dist) #creating new dataframe rather than transforming something into a dataframe
 create_df
 ```
 
@@ -107,10 +115,18 @@ ncol(df)
 nrow(df)  
 length(df)  #same as ncol
 summary(df)
-head(df) #show the first 6 rows of df
+head(df,2) #show the first 2 rows of df
 
 #If you know the number of the column you want you can refer to that to access column
-df[,1]
+df[,1] #all rows, only the first column
+df[1,1] #first row and column
+df[1,] #all columns for the first row
+#slicing
+df[1:10,2] #column 2, rows 1-10
+df2<- df[c(2,1,3),] #specifying rows two, one, and three, and all of the columns will display (this notation only applies to a dataframe)
+df2$car_speed #returns the column car speed for our new dataframe
+class(df2)
+
 
 #you could also use this notation to delete columns
 df <- df[,-2]
