--- a/Assignments/EmmaKaufman_A03_DataExploration.Rmd
+++ b/Assignments/EmmaKaufman_A03_DataExploration.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 3: Data Exploration"
-author: "Student Name"
+author: "Emma Kaufman"
 date: "Fall 2023"
 output: pdf_document
 geometry: margin=2.54cm
@@ -32,7 +32,16 @@ This exercise accompanies the lessons in Environmental Data Analytics on Data Ex
 
 1.  Check your working directory, load necessary packages (tidyverse, lubridate), and upload two datasets: the ECOTOX neonicotinoid dataset (ECOTOX_Neonicotinoids_Insects_raw.csv) and the Niwot Ridge NEON dataset for litter and woody debris (NEON_NIWO_Litter_massdata_2018-08_raw.csv). Name these datasets "Neonics" and "Litter", respectively. Be sure to include the subcommand to read strings in as factors.
 
-```{r,  message = FALSE}
+```{r, Loading packages}
+library(tidyverse)
+library(lubridate)
+
+getwd() 
+
+Neonics <- read.csv("./Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv",stringsAsFactors = TRUE)  # reading in ECOTOX neonicotinoid dataset
+Litter <- read.csv("./Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv", stringsAsFactors = TRUE) # reading in Niwot Ridge NEON dataset for litter and woody debris
+
+#do we need to print an output here?
 
 ```
 
@@ -41,63 +50,77 @@ This exercise accompanies the lessons in Environmental Data Analytics on Data Ex
 2.  The neonicotinoid dataset was collected from the Environmental Protection Agency's ECOTOX Knowledgebase, a database for ecotoxicology research. Neonicotinoids are a class of insecticides used widely in agriculture. The dataset that has been pulled includes all studies published on insects. Why might we be interested in the ecotoxicology of neonicotinoids on insects? Feel free to do a brief internet search if you feel you need more background information.
 
 > Answer:
+Understanding the ecotoxicology of these insecticides can help us to understand the risks neonicotinoids pose to other non-target  insects. What impact do they have on important pollinators (that are not the target), or is there an impact on the birds or mammals that eat the target insects? 
 
 3.  The Niwot Ridge litter and woody debris dataset was collected from the National Ecological Observatory Network, which collectively includes 81 aquatic and terrestrial sites across 20 ecoclimatic domains. 32 of these sites sample forest litter and woody debris, and we will focus on the Niwot Ridge long-term ecological research (LTER) station in Colorado. Why might we be interested in studying litter and woody debris that falls to the ground in forests? Feel free to do a brief internet search if you feel you need more background information.
 
-> Answer:
+> Answer: Litter and woody debris are important for nutrient cycling in forest ecosytems. When this debris breaks down it releases important nutrients into the forest soil. Litter and woody debris also are sources of microbial diversity within forests. That being said, high accumulation of litter and woody debris can be dangerous in areas that are at risk for forest fires, and litter and woody debris can sometimes be classified as "fuels" that need to be reduced. As a result we might be interseted in studying litter and woody debris to understand soil health, microbial diversity, or forest fire risk in a given forest. 
 
 4.  How is litter and woody debris sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here:
 
 > Answer: 
- 1.
- 2.
- 3. 
-
+ 1. Litter material ("defined as material that is dropped from the forest canopy and has a butt end diameter <2cm and a length <50 cm") was collected in elevated 0.5 m^2 pvc traps.
+ 2. Sampling occured at terrestrial NEON sites that contained woody vegetation >2m tall
+ 3. "In sites with > 50% aerial cover of woody vegetation >2m in height, placement of litter traps was random and utilized the randomized list of grid cell locations also used for herbaceous clip harvest and belowground biomass sampling".
+ 
 ## Obtain basic summaries of your data (Neonics)
 
 5.  What are the dimensions of the dataset?
 
-```{r}
-
+```{r, Neonics dimensions}
+dim(Neonics) #getting dimensions
 ```
 
 6.  Using the `summary` function on the "Effect" column, determine the most common effects that are studied. Why might these effects specifically be of interest?
 
-```{r}
-
+```{r, Neonics summary effects}
+summary(Neonics$Effect) #summary function
 ```
 
-> Answer:
+> Answer: The most common effects that are studied are population and mortality. I think these effects are specifically of interest because scientists want to understand what insects this insecticide is targeting, and whether or not the insecticide is effective at killing and reducing population sizes for pests that negatively impact agriculture. 
 
 
 7.  Using the `summary` function, determine the six most commonly studied species in the dataset (common name). What do these species have in common, and why might they be of interest over other insects? Feel free to do a brief internet search for more information if needed.[TIP: The `sort()` command can sort the output of the summary command...]
 
-```{r}
+```{r Neonics summary species}
 
+summary(Neonics$Species.Common.Name) #summary function
 ```
 
-> Answer:
+> Answer: Honey Bee, Parastic Wasp, Buff Tailed Bumblebee, Carniolan Honey Bee, Bumble Bee, and Italian Honeybee are the six most commonly studied species in the dataset. These species are all pollinators. They are of interest because of their ecological importance in the reproductive cycle of plants.
 
 8.  Concentrations are always a numeric value. What is the class of `Conc.1..Author.` column in the dataset, and why is it not numeric?
 
-```{r}
-
+```{r classes}
+class(Neonics$Conc.1..Author.) #what class is it
+View(Neonics$Conc.1..Author.) #viewing the column to understand the class
 ```
 
-> Answer:
+> Answer: It is a factor class. It is not numeric because it contains categorical data of a threshold concentration
 
 ## Explore your data graphically (Neonics)
 
 9.  Using `geom_freqpoly`, generate a plot of the number of studies conducted by publication year.
 
-```{r}
+```{r plotting}
+
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year), bins = 50) +
+ # geom_freqpoly(aes(x = Publication.Year), bins = 50, color = "darkgray") +
+  geom_freqpoly(aes(x = Publication.Year), bins = 50,  lty = 2)
+
 
 ```
 
 10. Reproduce the same graph but now add a color aesthetic so that different Test.Location are displayed as different colors.
 
-```{r}
+```{r colorful plotting}
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year), bins = 50) +
+  geom_freqpoly(aes(x = Publication.Year), bins = 50, color = "magenta") +
+  geom_freqpoly(aes(x = Publication.Year), bins = 50,  lty = 2)
 
+#what do you mean by different colors?
 ```
 
 Interpret this graph. What are the most common test locations, and do they differ over time?
@@ -108,37 +131,50 @@ Interpret this graph. What are the most common test locations, and do they diffe
 
 [**TIP**: Add `theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))` to the end of your plot command to rotate and align the X-axis labels...]
 
-```{r}
-
+```{r bar graph}
+ggplot(Neonics) +
+  geom_boxplot(aes(x = Endpoint)) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+#what is this showing us? it looks alphabetircal..l am i doing it right?
 ```
 
-> Answer:
+> Answer: NR-LETH (Aquatic Terrestrial 100% mortality) and NR-ZERO (Aquatic Terrestrial 0% mortality)
 
 ## Explore your data (Litter)
 
 12. Determine the class of collectDate. Is it a date? If not, change to a date and confirm the new class of the variable. Using the `unique` function, determine which dates litter was sampled in August 2018.
 
-```{r}
+```{r collectDate class}
+class(Litter$collectDate) #class of column
 
+Dates <- as.Date(Litter$collectDate) #convert the data within this column to class of dates
+
+class(Dates) #checking the class of the new variable
+
+unique(Dates) #getting the unique values within the vector
+
+#do we just do this to a new variable, or to the column itself?
 ```
 
 13. Using the `unique` function, determine how many plots were sampled at Niwot Ridge. How is the information obtained from `unique` different from that obtained from `summary`?
 
-```{r}
+```{r Niowt Ridge plots}
+unique(Litter$plotID) #looking at unique results
 
+summary(Litter$plotID) #comparing to summary results
 ```
 
-> Answer:
+> Answer: 12 plots were sampled at Niwot Ridge. The unique function tells you all of the unique values within the column, whereas the summary function tells you the count of occurances of each unique value. 
 
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
 
-```{r}
+```{r bar graph of functionalGroups}
 
 ```
 
 15. Using `geom_boxplot` and `geom_violin`, create a boxplot and a violin plot of dryMass by functionalGroup.
 
-```{r}
+```{r box and violin plot}
 
 ```
 
