--- a/Lessons/03Lab_MoreDataExploration.Rmd
+++ b/Lessons/03Lab_MoreDataExploration.Rmd
@@ -3,9 +3,16 @@ title: "Lab 3 - Data Types | Exploring Datasets"
 author: "Environmental Data Analytics | John Fay and Luana Lima "
 date: "Fall 2023"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE} 
+#r setup is the name of the chunk, can't have the same name as another r code chunk
+#ctrl alt i is inset chunk
+#alt <- is insert assignment operator
+#ctrl shift m is insert pipe operator
+
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
@@ -43,19 +50,19 @@ vector3
 vector1[3] # 
 
 # Matrices ----
-matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # 
+matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # sequence of numbers ranging from 1 to 20, with 5 rows and 4 columns
 matrix1
-matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) #
+matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) #byrow or by column just changes how your data is organized within a matrix
 matrix2
 matrix3 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE, # return after comma continues the line
                   dimnames = list(c("uno", "dos", "tres", "quatro", "cinco"), 
                                   c("un", "deux", "trois", "quatre"))) #
 
-matrix1[4, ] #
-matrix1[ , 3] #
-matrix1[c(12, 14)] #
-matrix1[c(12:14)] #
-matrix1[2:4, 1:3] #
+matrix1[4, ] #4th row of matrix, all columns
+matrix1[ , 3] # all rows in the 3rd column
+matrix1[c(12, 14)] #elements 12 and 14
+matrix1[c(12:14)] #elements 12-14
+matrix1[2:4, 1:3] #subset of rows and columns, defeault step of 1
 
 cells <- c(1, 26, 24, 68)
 rnames <- c("R1", "R2")
@@ -73,6 +80,7 @@ d <- c(1, 2, 3, 4) # What type of vector?
 e <- c("red", "white", "red", NA) # What type of vector?
 f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector?
 dataframe1 <- data.frame(d,e,f) #
+dataframe1
 names(dataframe1) <- c("ID","Color","Passed"); View(dataframe1) # 
 
 dataframe1[1:2,] # 
@@ -94,25 +102,45 @@ Question: In the R chunk below, write "dataframe1\$". Press `tab` after you type
 Find a ten-day forecast of temperatures (Fahrenheit) for Durham, North Carolina. Create two vectors, one representing the high temperature on each of the ten days and one representing the low.
 
 ```{r DataExercise-1a}
+dataframe1$Color
 
-```
+high_temperatures <- c(90,95,87,101,115,99,98,100,102,92)
+high_temperatures
+
+low_temperatures <- c(55,55,57,61,61,58,60,55,54,53)
+low_temperatures
+```   
 
 Now, create two additional vectors that include the ten-day forecast for the high and low temperatures in Celsius. Use a function to create the two new vectors from your existing ones in Fahrenheit.
 
 ```{r DataExercise-1b}
+to_celsius <- function(x){
+  (x-32)*(5/9)
+}
+
+high_celsius= to_celsius(high_temperatures)
+high_celsius
+
+low_celsisus= to_celsius(low_temperatures)
+low_celsisus
 
 ```
 
 Combine your four vectors into a data frame and add informative column names.
 
 ```{r DataExercise-1c}
-
+Temp_dataframe = data.frame(low_temperatures,low_celsisus,high_temperatures,high_celsius)
+names(Temp_dataframe) <- c("10 day low (F)","10 day low (C)","10 day high (F)", "10 day high (C)")
+Temp_dataframe
 ```
 
 Use the common functions `summary` and `sd` to obtain basic data summaries of the ten-day forecast. How would you call these functions differently for the entire data frame vs. a single column? Attempt to demonstrate both options below.
 
 ```{r DataExercise-1d}
-
+summary(Temp_dataframe)
+sd(Temp_dataframe)
+sd(Temp_dataframe$`10 day low (F)`)
+summary(Temp_dataframe$`10 day low (F)`)
 ```
 
 ### Date objects
@@ -128,7 +156,7 @@ Remember formatting of dates in R:
 # (code must be uncommented)
 today <- Sys.Date()
 format(today, format = "%B")
-#format(today, format = "")
+format(today, format = "%d-%m-%y")
 #format(today, format = "")
 #format(today, format = "")
 
@@ -141,7 +169,7 @@ Install and load the package lubridate into your R session. Lubridate offers fas
 More info on lubridate [here][<https://cran.r-project.org/web/packages/lubridate/lubridate.pdf>].
 
 ```{r DateExercise1}
-#install.packages("lubridate")
+install.packages("lubridate")
 library(lubridate)
 
 #Ex1
@@ -159,8 +187,8 @@ date_obj_today
 #Ex_3 - on your own...
 str_juneteenth <- "19 June 1865"
 #Since the format is month-day-year we will use function mdy()
-#date_juneteenth <- ()
-#date_juneteenth
+date_juneteenth <- dmy(str_juneteenth)
+date_juneteenth
 ```
 
 ```{r DateExercise2}
