--- a/Assignments/EmmaKaufman_A03_DataExploration.Rmd
+++ b/Assignments/EmmaKaufman_A03_DataExploration.Rmd
@@ -41,8 +41,6 @@ getwd()
 Neonics <- read.csv("./Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv",stringsAsFactors = TRUE)  # reading in ECOTOX neonicotinoid dataset
 Litter <- read.csv("./Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv", stringsAsFactors = TRUE) # reading in Niwot Ridge NEON dataset for litter and woody debris
 
-#do we need to print an output here?
-
 ```
 
 ## Learn about your system
@@ -116,11 +114,8 @@ ggplot(Neonics) +
 
 ```{r colorful plotting}
 ggplot(Neonics) +
-  geom_freqpoly(aes(x = Publication.Year), bins = 50) +
-  geom_freqpoly(aes(x = Publication.Year), bins = 50, color = "magenta") +
-  geom_freqpoly(aes(x = Publication.Year), bins = 50,  lty = 2)
+  geom_freqpoly(aes(x = Publication.Year, color = Test.Location), bins = 50, lty = 1) 
 
-#what do you mean by different colors?
 ```
 
 Interpret this graph. What are the most common test locations, and do they differ over time?
@@ -133,12 +128,11 @@ Interpret this graph. What are the most common test locations, and do they diffe
 
 ```{r bar graph}
 ggplot(Neonics) +
-  geom_boxplot(aes(x = Endpoint)) +
+  geom_bar(aes(x = Endpoint)) +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
-#what is this showing us? it looks alphabetircal..l am i doing it right?
 ```
 
-> Answer: NR-LETH (Aquatic Terrestrial 100% mortality) and NR-ZERO (Aquatic Terrestrial 0% mortality)
+> Answer: NOEL (terrestrial, No-observable-effect-level) and LOEL (terrestrial, Lowest-observable-effect-level)
 
 ## Explore your data (Litter)
 
@@ -147,13 +141,12 @@ ggplot(Neonics) +
 ```{r collectDate class}
 class(Litter$collectDate) #class of column
 
-Dates <- as.Date(Litter$collectDate) #convert the data within this column to class of dates
+Litter$collectDate <- as.Date(Litter$collectDate, fomrat = "%Y-%m-%d") #convert the data within this column to class of dates
 
-class(Dates) #checking the class of the new variable
+class(Litter$collectDate) #checking the class of the new variable
 
-unique(Dates) #getting the unique values within the vector
+unique(Litter$collectDat) #getting the unique values within the vector
 
-#do we just do this to a new variable, or to the column itself?
 ```
 
 13. Using the `unique` function, determine how many plots were sampled at Niwot Ridge. How is the information obtained from `unique` different from that obtained from `summary`?
@@ -169,19 +162,29 @@ summary(Litter$plotID) #comparing to summary results
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
 
 ```{r bar graph of functionalGroups}
-
+#making a bar graph of functional groups
+ggplot(Litter) +
+  geom_bar(aes(x = functionalGroup)) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 ```
 
 15. Using `geom_boxplot` and `geom_violin`, create a boxplot and a violin plot of dryMass by functionalGroup.
 
 ```{r box and violin plot}
 
+ggplot(Litter) +
+  geom_boxplot(aes(x = functionalGroup, y = dryMass, group = cut_width(functionalGroup, 1)))
+
+#
+ggplot(Litter) +
+  geom_violin(aes(x = functionalGroup, y = dryMass), draw_quantiles = c(0.25, 0.5, 0.75))
+
 ```
 
 Why is the boxplot a more effective visualization option than the violin plot in this case?
 
-> Answer:
+> Answer: The violin plot displays density distributions but for the data we are working in there isn't a huge range of values for each functional group. As a result the violin plot isn't very informative and difficult to interpret. The boxplot is more interpretable; it shows us discernable values for dryMass for the different functional groups, most notably for the groups that had larger masses (mixed and needles). 
 
 What type(s) of litter tend to have the highest biomass at these sites?
 
-> Answer:
+> Answer: Needles tend to have the highest biomass at these sites. 
