--- a/Assignments/EmmaKaufman_A04_DataWrangling.Rmd
+++ b/Assignments/EmmaKaufman_A04_DataWrangling.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 4: Data Wrangling"
-author: "Student Name"
+author: "Emma Kaufman"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -32,12 +32,42 @@ The completed exercise is due on Thursday, Sept 28th @ 5:00pm.
 
 ```{r setup, message = FALSE}
 #1a 
+#Install packages
+library(tidyverse)
+library(lubridate)
+library(here) 
 
 #1b 
+getwd()
 
 #1c 
+#reading in all necessary datasets
+O3_NC2018 <- read.csv(
+  file=here("Data/Raw/EPAair_O3_NC2018_raw.csv"), 
+  stringsAsFactors = TRUE
+)
+
+O3_NC2019 <- read.csv(
+  file=here("Data/Raw/EPAair_O3_NC2019_raw.csv"), 
+  stringsAsFactors = TRUE
+)
+
+pm25_18 <- read.csv(
+  file=here("Data/Raw/EPAair_PM25_NC2018_raw.csv"), 
+  stringsAsFactors = TRUE
+)
+
+pm25_19 <- read.csv(
+  file=here("Data/Raw/EPAair_PM25_NC2019_raw.csv"), 
+  stringsAsFactors = TRUE
+)
 
 #2 
+#using glimpse to get a cursory look at the data
+glimpse(O3_NC2018)
+glimpse(O3_NC2019)
+glimpse(pm25_18)
+glimpse(pm25_19)
 
 ```
 
@@ -54,13 +84,33 @@ The completed exercise is due on Thursday, Sept 28th @ 5:00pm.
 
 ```{r}
 #3
+#using lubridate to change dates to date object 
+O3_NC2018$Date <- mdy(O3_NC2018$Date)
+O3_NC2019$Date <- mdy(O3_NC2019$Date)
+pm25_18$Date <- mdy(pm25_18$Date)
+pm25_19$Date <- mdy(pm25_19$Date)
 
 #4
+#selecting columns 
+O3_NC2018.select <- select(O3_NC2018, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
+
+O3_NC2019.select <- select(O3_NC2019, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
+
+pm25_18.select <- select(pm25_18, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
+
+pm25_19.select <- select(pm25_19, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
 
 #5
+#filling in with same value
+pm25_18.select$AQS_PARAMETER_DESC <- "PM2.5"
+pm25_19.select$AQS_PARAMETER_DESC <- "PM2.5"
 
 #6
-
+#saving processed data
+write.csv(pm25_18.select, row.names = FALSE, file = "./Data/Processed/EPAair_PM25_NC2018_Processed.csv")
+write.csv(pm25_19.select, row.names = FALSE, file = "./Data/Processed/EPAair_PM25_NC2019_Processed.csv")
+write.csv(O3_NC2018.select, row.names = FALSE, file = "./Data/Processed/EPAair_O3_NC2018_Processed.csv")
+write.csv(O3_NC2019.select, row.names = FALSE, file ="./Data/Processed/EPAair_O3_NC2019_Processed.csv")
 ```
 
 
@@ -86,9 +136,22 @@ The completed exercise is due on Thursday, Sept 28th @ 5:00pm.
 
 ```{r}
 #7 
+#combining the datasets with rbind
+EPAair <- rbind(O3_NC2018.select,O3_NC2019.select,pm25_18.select,pm25_19.select)
 
 #8 
+EPAair.new <- EPA.air %>% 
+  filter(Site.Name %in% c("Linville Falls", "Durham Armory", "Leggett", "Hattie Avenue", "Clemmons Middle", 
+                          "Mendenhall School", "Frying Pan Mountain", "West Johnston Co.", "Garinger High School",
+                          "Castle Hayne", "Pitt Agri. Center", "Bryson City", "Millbrook School")) %>% 
+  
+  
 
+  * Some sites have multiple measurements per day. Use the split-apply-combine strategy to generate daily means: group by date, site name, AQS parameter, and county. Take the mean of the AQI value, latitude, and longitude.
+  
+  * Add columns for "Month" and "Year" by parsing your "Date" column (hint: `lubridate` package)
+  
+  * Hint: the dimensions of this dataset should be 14,752 x 9.
 #9
 
 #10
