--- a/Lessons/04Lab_DataWrangling.Rmd
+++ b/Lessons/04Lab_DataWrangling.Rmd
@@ -58,10 +58,11 @@ class(NTL.phys.data$lakeid)
 class(NTL.phys.data$depth)
 
 # dplyr filtering
-NTL.phys.data.surface <- filter(NTL.phys.data, depth == 0)
+NTL.phys.data.surface <- filter(NTL.phys.data, depth == 0) #== because it is this value
 
 # Choose multiple conditions to filter
 summary(NTL.phys.data$lakename)
+levels(NTL.phys.data$lakename)
 NTL.phys.data.PeterPaul <- 
   filter(NTL.phys.data, lakename %in% c("Paul Lake", "Peter Lake"))
 
@@ -74,10 +75,14 @@ NTL.phys.data.JunethruOctober <- filter(NTL.phys.data, daynum %in% c(152:304))
 # Exercise 1: 
 # filter NTL.phys.data for the year 1999
 # what code do you need to use, based on the class of the variable?
+class(NTL.phys.data$year4)
 
+NTL.phys.data.1999 <- filter(NTL.phys.data, year4==1999)
 
 # Exercise 2: 
 # filter NTL.phys.data for Tuesday Lake from 1990 through 1999.
+
+NTL.phys.data.Tuesday.90.99 <- filter(NTL.phys.data, year4 %in% c(1990:1999), lakename %in% c("Tuesday Lake"))
 
 
 ```
@@ -102,13 +107,25 @@ NTL.phys.data.processed <-
   mutate(temperature_F = (temperature_C*9/5) + 32)
 
 #Exercise 3: Using a pipe filter NTL.phys.data for Tuesday Lake from 1990 
-# through 1999 only for July.
+# through 1999 only for July, you can create a month column, or before your filter you can convert to a month
+
+NTL.phys.data.newprocess <-
+  NTL.phys.data %>%
+  filter(lakename == "Tuesday Lake") %>%
+  filter(year4 %in% c(1990:1999))  %>%
+  filter(daynum %in% c(181:213))
+
 
 
 #Exercise 4: Using the data from part 3, a pipe, and the summarize() function 
 # find the mean surface temperature (hints: you will need to add another
 # filter for depth==0). Make sure you eliminate NAs before computing the means.
 
+exercise4 <-
+  NTL.phys.data.newprocess %>% 
+  filter(depth == 0) %>% 
+  drop_na(temperature_C) %>% 
+  summarise(mean(temperature_C))
   
 ```
 
@@ -121,6 +138,7 @@ For gather we will use `pivot_longer` and for spread we will use `pivot_wider`.
 #  on the deck of the sampling boat) into one column using pivot_longer. Name
 #  the new column holding the irradiance type as "Irradiance_Type", and name the
 #  new column holding the irradiance values as "Irradiance_Value".
+
 
 
 #Exercise 6: Spread temperatureC into more than one column based on the depth.
